fixed banner verbiage and spacing,removed map on home page, and removed contact form from contact page

--- a/index.html
+++ b/index.html
@@ -146,9 +146,16 @@
                                 <span class="icon-bar"></span>
                                 <span class="icon-bar"></span>
                             </button>
-                            <a class="navbar-brand" href="index.html"
-                                ><img src="images/logo.png" alt=""
-                            /></a>
+                            <a
+                                class="navbar-brand"
+                                style="font-size: 15px"
+                                href="index.html"
+                                ><img
+                                    style="width: 25px"
+                                    src="images/excavator.png"
+                                    alt=""
+                                />Surwilo Contracting</a
+                            >
                         </div>
 
                         <!-- Collect the nav links, forms, and other content for toggling -->
@@ -660,12 +667,27 @@
             <!-- banner-section 
 			================================================== -->
             <section class="banner-section">
-                <div class="container">
+                <div
+                    class="container"
+                    style="
+                        display: flex;
+                        flex-direction: column;
+                        justify-content: center;
+                        align-items: center;
+                    "
+                >
                     <h2>
-                        Construct is made with greatest page builder &amp; most
-                        sold in codecanyon
-                        <a href="#" class="button-one">Buy this theme</a>
+                        Fairfield County's Underground Infrastructure Experts
                     </h2>
+                    <br />
+                    <h2><em> We Dig America</em></h2>
+                    <br />
+                    <a
+                        href="tel:+19143125729"
+                        class="button-one"
+                        style="text-align: center"
+                        >Call Us for a Quote</a
+                    >
                 </div>
             </section>
             <!-- End banner section -->
@@ -1205,7 +1227,7 @@
 
             <!-- quote-section 
 			================================================== -->
-            <section class="quote-section">
+            <!-- <section class="quote-section">
                 <div id="map"></div>
 
                 <div class="container">
@@ -1249,7 +1271,7 @@
                         </div>
                     </div>
                 </div>
-            </section>
+            </section> -->
             <!-- End quote section -->
 
             <!-- footer 
@@ -1358,15 +1380,15 @@
                                     <h2>Working Hours</h2>
                                     <p class="first-par">
                                         You can contact or visit us during
-                                        working time.
+                                        working hours.
                                     </p>
-                                    <p><span>Tel: </span> 1234 - 5678 - 9012</p>
+                                    <p><span>Tel: </span> 203-348-6966</p>
                                     <p>
-                                        <span>Email: </span> nunforest@gmail.com
+                                        <span>Email: </span> service@surwilo.com
                                     </p>
                                     <p>
-                                        <span>Working Hours: </span> 8:00 a.m -
-                                        17:00 a.m
+                                        <span>Working Hours: </span>M - F: 8:00
+                                        a.m - 5:00 p.m
                                     </p>
                                 </div>
                             </div>
