Added Services to homepage

--- a/services.html
+++ b/services.html
@@ -79,8 +79,8 @@
 							<li><a href="projects.html">Projects</a></li>
 							<li><a class="active" href="services.html">Our Services</a>
 								<ul class="drop-down">
-									<li><a href="buildings.html">Small &amp; Large Buildings</a></li>
-									<li><a href="garden.html">Elegant Garden</a></li>
+									<li><a href="#drainage-systems">Small &amp; Large Buildings</a></li>
+									<li><a href="#water-systems">Elegant Garden</a></li>
 									<li><a href="projecting.html">Perfect Projectings</a></li>
 									<li><a href="energy.html">Energy Repair</a></li>
 									<li><a href="roads.html">Roads &amp; Paths</a></li>
