--- a/index.html
+++ b/index.html
@@ -170,36 +170,46 @@
                                 <li><a href="about.html">About</a></li>
                                 <!-- <li><a href="projects.html">Projects</a></li> -->
                                 <li>
-                                    <a href="services.html">Our Services</a>
+                                    <a href="#">Our Services</a>
                                     <ul class="drop-down">
                                         <li>
-                                            <a href="buildings.html"
-                                                >Small &amp; Large Buildings</a
+                                            <a href="drainage-systems.html"
+                                                >Drainage Systems</a
                                             >
                                         </li>
                                         <li>
-                                            <a href="garden.html"
-                                                >Elegant Garden</a
+                                            <a href="water-services.html"
+                                                >Water Services</a
                                             >
                                         </li>
                                         <li>
-                                            <a href="projecting.html"
-                                                >Perfect Projectings</a
+                                            <a href="sanitary-sewers.html"
+                                                >Sanitary Sewers</a
                                             >
                                         </li>
                                         <li>
-                                            <a href="energy.html"
-                                                >Energy Repair</a
+                                            <a href="trenching.html"
+                                                >Trenching</a
                                             >
                                         </li>
                                         <li>
-                                            <a href="roads.html"
-                                                >Roads &amp; Paths</a
+                                            <a href="excavation.html"
+                                                >Excavation</a
                                             >
                                         </li>
                                         <li>
-                                            <a href="repairing.html"
-                                                >Repairing &amp; Maintenance</a
+                                            <a href="water-mains.html"
+                                                >Water Mains</a
+                                            >
+                                        </li>
+                                        <li>
+                                            <a href="site-work.html"
+                                                >Water Mains</a
+                                            >
+                                        </li>
+                                        <li>
+                                            <a href="emergency-services.html"
+                                                >Emergency Services</a
                                             >
                                         </li>
                                     </ul>
@@ -700,18 +710,23 @@
                         <h1>SERVICES</h1>
                         <br />
                         <div class="row">
+                            <h3 style="margin-left: 15px">
+                                Residential &amp; Commercial
+                            </h3>
+                            <br />
                             <div class="col-md-3">
                                 <div class="services-post">
                                     <!-- <img src="upload/others/5.jpg" alt="" /> -->
                                     <div class="services-content">
-                                        <h2>Elegant Garden</h2>
+                                        <h2>Drainage Systems</h2>
                                         <p>
-                                            Aenean sed justo tincidunt,
-                                            vulputate nisi sit amet, rutrum
-                                            ligula. Pellentesque dictum aliquam
-                                            ornare. Sed elit lectus.
+                                            75 years of experience helps us
+                                            diagnose the source of the problem
+                                            water quickly, effectively, and
+                                            leave your property as we found it.
                                         </p>
-                                        <a href="garden.html"
+
+                                        <a href="services.html/#drainage"
                                             >Read More
                                             <i class="fa fa-angle-right"></i
                                         ></a>
@@ -723,14 +738,21 @@
                                 <div class="services-post">
                                     <!-- <img src="upload/others/2.jpg" alt="" /> -->
                                     <div class="services-content">
-                                        <h2>Small &amp; Large Building</h2>
+                                        <h2>Water Services</h2>
                                         <p>
-                                            Aenean sed justo tincidunt,
-                                            vulputate nisi sit amet, rutrum
-                                            ligula. Pellentesque dictum aliquam
-                                            ornare. Sed elit lectus.
+                                            All utility work on pipes - both new
+                                            installations and repairs of
+                                            existing pipes that have failed. We
+                                            have years of experience upgrading
+                                            existing water services that have
+                                            deteriorated to the point that there
+                                            is a leak or a noticeable loss in
+                                            pressure. We are also very competent
+                                            in installing new services from the
+                                            water main in the road to your
+                                            foundation.
                                         </p>
-                                        <a href="buildings.html"
+                                        <a href="services.html/#water-services"
                                             >Read More
                                             <i class="fa fa-angle-right"></i
                                         ></a>
@@ -742,14 +764,14 @@
                                 <div class="services-post">
                                     <!-- <img src="upload/others/3.jpg" alt="" /> -->
                                     <div class="services-content">
-                                        <h2>Perfect Plans &amp; Projecting</h2>
+                                        <h2>Sanitary Sewers</h2>
                                         <p>
-                                            Aenean sed justo tincidunt,
-                                            vulputate nisi sit amet, rutrum
-                                            ligula. Pellentesque dictum aliquam
-                                            ornare. Sed elit lectus.
+                                            Systems are usually a Gravity System
+                                            or Pump Systems. We identify the
+                                            issue, excavate, and repair/install
+                                            a solution
                                         </p>
-                                        <a href="projecting.html"
+                                        <a href="services.html"
                                             >Read More
                                             <i class="fa fa-angle-right"></i
                                         ></a>
@@ -761,14 +783,17 @@
                                 <div class="services-post">
                                     <!-- <img src="upload/others/4.jpg" alt="" /> -->
                                     <div class="services-content">
-                                        <h2>Electricy installation</h2>
+                                        <h2>Trenching</h2>
                                         <p>
-                                            Aenean sed justo tincidunt,
-                                            vulputate nisi sit amet, rutrum
-                                            ligula. Pellentesque dictum aliquam
-                                            ornare. Sed elit lectus.
+                                            We provide treching services to bury
+                                            electric, propane, and
+                                            communications lines. We also
+                                            install backup generators including
+                                            pouring the concrete pad and
+                                            performing the excavation to and
+                                            from your house.
                                         </p>
-                                        <a href="projecting.html"
+                                        <a href="services.html"
                                             >Read More
                                             <i class="fa fa-angle-right"></i
                                         ></a>
@@ -777,11 +802,12 @@
                             </div>
                         </div>
                         <div class="row">
+                            <br />
                             <div class="col-md-3">
                                 <div class="services-post">
                                     <!-- <img src="upload/others/5.jpg" alt="" /> -->
                                     <div class="services-content">
-                                        <h2>Elegant Garden</h2>
+                                        <h2>Excavation</h2>
                                         <p>
                                             Aenean sed justo tincidunt,
                                             vulputate nisi sit amet, rutrum
@@ -800,7 +826,7 @@
                                 <div class="services-post">
                                     <!-- <img src="upload/others/2.jpg" alt="" /> -->
                                     <div class="services-content">
-                                        <h2>Small &amp; Large Building</h2>
+                                        <h2>Water Mains</h2>
                                         <p>
                                             Aenean sed justo tincidunt,
                                             vulputate nisi sit amet, rutrum
@@ -819,7 +845,7 @@
                                 <div class="services-post">
                                     <!-- <img src="upload/others/3.jpg" alt="" /> -->
                                     <div class="services-content">
-                                        <h2>Perfect Plans &amp; Projecting</h2>
+                                        <h2>Site Work</h2>
                                         <p>
                                             Aenean sed justo tincidunt,
                                             vulputate nisi sit amet, rutrum
@@ -838,7 +864,7 @@
                                 <div class="services-post">
                                     <!-- <img src="upload/others/4.jpg" alt="" /> -->
                                     <div class="services-content">
-                                        <h2>Electricy installation</h2>
+                                        <h2>Emergency Services</h2>
                                         <p>
                                             Aenean sed justo tincidunt,
                                             vulputate nisi sit amet, rutrum
@@ -1018,19 +1044,16 @@
 
                         <div class="col-md-5">
                             <div class="about-box">
+                                <br />
                                 <img src="upload/others/about.jpg" alt="" />
-                                <h2>Who we are</h2>
-                                <p>
-                                    Duis aute irure dolor in reprehenderit in
-                                    voluptate velit esse cillum dolore eu fugiat
-                                    nulla pariatur. Excepteur sint.
+                                <h2>Working Hours</h2>
+                                <p class="first-par">
+                                    You can contact or visit us during working
+                                    hours.
                                 </p>
-                                <p>
-                                    Lorem ipsum dolor sit amet, consectetur
-                                    adipisicing elit, sed do eiusmod tempor
-                                    incididunt ut labore et dolore magna aliqua.
-                                    Ut enim ad minim.
-                                </p>
+                                <p>Monday - Friday: 8:00 a.m - 5:00 p.m</p>
+                                <p><span>Tel: </span> 203-348-6966</p>
+                                <p><span>Email: </span> service@surwilo.com</p>
                             </div>
                         </div>
                     </div>
@@ -1277,7 +1300,7 @@
             <!-- footer 
 			================================================== -->
             <footer>
-                <div class="container">
+                <!-- <div class="container">
                     <div class="footer-widgets">
                         <div class="row">
                             <div class="col-md-3">
@@ -1299,7 +1322,7 @@
                                     ></a>
                                 </div>
                             </div>
-                            <!-- <div class="col-md-3">
+                            <div class="col-md-3">
                                 <div class="widgets">
                                     <h2>Tags</h2>
                                     <ul class="tag-list">
@@ -1374,7 +1397,7 @@
                                         </li>
                                     </ul>
                                 </div>
-                            </div> -->
+                            </div>
                             <div class="col-md-3">
                                 <div class="widgets info-widget">
                                     <h2>Working Hours</h2>
@@ -1394,7 +1417,7 @@
                             </div>
                         </div>
                     </div>
-                </div>
+                </div> -->
                 <div class="last-line">
                     <div class="container">
                         <p class="copyright">
