adjusted copyright to sit within the prior div background color

--- a/index.html
+++ b/index.html
@@ -1300,8 +1300,8 @@
             <!-- footer 
 			================================================== -->
             <footer>
-                <!-- <div class="container">
-                    <div class="footer-widgets">
+                <div class="container">
+                    <!-- <div class="footer-widgets">
                         <div class="row">
                             <div class="col-md-3">
                                 <div class="widgets">
@@ -1416,16 +1416,24 @@
                                 </div>
                             </div>
                         </div>
+                    </div> -->
+
+                    <div class="container" style="margin-top: -50px">
+                        <p class="copyright">
+                            &copy; Copyright 2023. Surwilo Contracting, LLC. All
+                            rights reserved.
+                        </p>
                     </div>
-                </div> -->
-                <div class="last-line">
+                    <br />
+                </div>
+                <!-- <div class="last-line">
                     <div class="container">
                         <p class="copyright">
                             &copy; Copyright 2023. Surwilo Contracting, LLC. All
                             rights reserved.
                         </p>
                     </div>
-                </div>
+                </div> -->
             </footer>
             <!-- End footer -->
         </div>
