--- a/contact.html
+++ b/contact.html
@@ -50,21 +50,21 @@
                         <div class="container">
                             <div class="row">
                                 <div class="col-md-8">
-                                    <ul class="info-list">
+                                    <ul class="info-list" style="text-align: center;">
                                         <li>
                                             <i class="fa fa-phone"></i>
                                             Call us:
-                                            <span>1234 - 5678 - 9012</span>
+                                            <a style="color:inherit" href="tel:+12033486966">203-348-6966</a href="tel:203-348-6966">
                                         </li>
                                         <li>
                                             <i class="fa fa-envelope-o"></i>
                                             Email us:
-                                            <span>nunforest@gmail.com</span>
+                                            <a style="color:inherit" href="mailto:service@surwilo.com">service@surwilo.com</a>
                                         </li>
                                         <li>
                                             <i class="fa fa-clock-o"></i>
                                             working time:
-                                            <span>08:00 - 17:00</span>
+                                            <span>08:00 am - 5:00 pm</span>
                                         </li>
                                     </ul>
                                 </div>
@@ -117,8 +117,8 @@
                                 <li><a href="about.html">About</a></li>
                                 <!-- <li><a href="projects.html">Projects</a></li> -->
                                 <li>
-                                    <a href="services.html">Our Services</a>
-                                    <ul class="drop-down">
+                                    <a href="index.html#services-section">Our Services</a>
+                                    <!-- <ul class="drop-down">
                                         <li>
                                             <a href="buildings.html"
                                                 >Small &amp; Large Buildings</a
@@ -149,7 +149,7 @@
                                                 >Repairing &amp; Maintenance</a
                                             >
                                         </li>
-                                    </ul>
+                                    </ul> -->
                                 </li>
                                 <!-- <li><a href="blog.html">blog</a></li> -->
                                 <li>
