--- a/contact.html
+++ b/contact.html
@@ -343,8 +343,8 @@
             <!-- End contact section --><!-- footer 
 			================================================== -->
             <footer>
-                <!-- <div class="container">
-                    <div class="footer-widgets">
+                <div class="container">
+                    <!-- <div class="footer-widgets">
                         <div class="row">
                             <div class="col-md-3">
                                 <div class="widgets">
@@ -454,16 +454,23 @@
                                 </div>
                             </div>
                         </div>
+                    </div> -->
+                    <div class="container" style="margin-top: -50px; text-align: center">
+                        <p class="copyright">
+                            &copy; Copyright 2023. Surwilo Contracting, LLC. All
+                            rights reserved.
+                        </p>
                     </div>
-                </div> -->
-                <div class="last-line">
+                    <br />
+                </div>
+                <!-- <div class="last-line">
                     <div class="container">
                         <p class="copyright">
                             &copy; Copyright 2023. Surwilo Contracting, LLC. All
                             rights reserved.
                         </p>
                     </div>
-                </div>
+                </div> -->
             </footer>
             <!-- End footer -->
         </div>
