--- a/index.html
+++ b/index.html
@@ -7,6 +7,13 @@
         <meta charset="utf-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1" />
 
+        <!-- favicon path  -->
+        <link
+            rel="shortcut icon"
+            href="images/favicon/favicon.ico"
+            type="image/x-icon"
+        />
+
         <link
             href="http://fonts.googleapis.com/css?family=Montserrat:300,400,700"
             rel="stylesheet"
