added services and service-area pages

--- a/drainage-systems.html
+++ b/drainage-systems.html
@@ -2,7 +2,14 @@
 
 <html lang="en" class="no-js">
     <head>
-        <title>Construct</title>
+        <title>Excavation services in Stamford, CT, and nearby areas</title>
+
+        <!-- favicon path  -->
+        <link
+            rel="shortcut icon"
+            href="../images/favicon/favicon.ico"
+            type="image/x-icon"
+        />
 
         <meta charset="utf-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1" />
@@ -121,9 +128,16 @@
                                 <span class="icon-bar"></span>
                                 <span class="icon-bar"></span>
                             </button>
-                            <a class="navbar-brand" href="index.html"
-                                ><img src="images/logo.png" alt=""
-                            /></a>
+                            <a
+                                class="navbar-brand"
+                                style="font-size: 15px"
+                                href="#home-section"
+                                ><img
+                                    style="width: 25px"
+                                    src="images/excavator.png"
+                                    alt=""
+                                />Surwilo Contracting</a
+                            >
                         </div>
 
                         <!-- Collect the nav links, forms, and other content for toggling -->
