fixed path reference issue on all links by adding the dot

--- a/services/trenching.html
+++ b/services/trenching.html
@@ -306,7 +306,7 @@
                                                 alt=""
                                             />
                                             <div class="services-content">
-                                                <h2>General Repair</h2>
+                                                <h2>Repair</h2>
                                                 <p>
                                                     Aenean sed justo tincidunt,
                                                     vulputate nisi sit amet,
@@ -347,7 +347,7 @@
                                                 alt=""
                                             />
                                             <div class="services-content">
-                                                <h2>Maintanance</h2>
+                                                <h2>New Installation</h2>
                                                 <p>
                                                     Aenean sed justo tincidunt,
                                                     vulputate nisi sit amet,
@@ -387,38 +387,48 @@
                                 <div class="services-tabs">
                                     <ul>
                                         <li>
-                                            <a href="#"
+                                            <a href="../services/"
                                                 >All Services</a
                                             >
                                         </li>
-                                        <li>
-                                            <a href="garden.html"
-                                                >Elegant Garden</a
+                                        <li >
+                                            <a href="./drainage-systems.html"
+                                                >Drainage Systems</a
                                             >
                                         </li>
-                                        <li>
-                                            <a href="buildings.html"
-                                                >Small &amp; Large Buildings</a
+                                        <li >
+                                            <a href="./excavation.html"
+                                                >Excavation</a
                                             >
                                         </li>
-                                        <li>
-                                            <a href="projecting.html"
-                                                >Perfect Projectings</a
+                                        <li >
+                                            <a href="./sanitary-sewers.html"
+                                                >Sanitary Sewers</a
                                             >
                                         </li>
-                                        <li>
-                                            <a href="energy.html"
-                                                >Energy Repair</a
-                                            >
-                                        </li>
-                                        <li>
-                                            <a href="roads.html"
-                                                >Roads &amp; Paths</a
+                                        <li >
+                                            <a href="./site-work.html"
+                                                >Site Work</a
                                             >
                                         </li>
                                         <li class="active">
-                                            <a href="repairing.html"
-                                                >Repairing &amp; Maintenance</a
+                                            <a href="./trenching.html"
+                                                >Trenching</a
+                                            >
+                                        </li>
+                                        <li >
+                                            <a href="./water-mains.html"
+                                                >Water Mains</a
+                                            >
+                                        </li>
+                                        <li >
+                                            <a href="./water-services.html"
+                                                >Water Services</a
+                                            >
+                                        </li>
+                                        <li >
+                                            <a href="./emergency-services.html"
+                                                >Emergency Services</a
                                             >
                                         </li>
                                     </ul>
