fixed links on home page

--- a/index.html
+++ b/index.html
@@ -180,42 +180,42 @@
                                     <a href="/services">Services</a>
                                     <ul class="drop-down">
                                         <li>
-                                            <a href="/services/drainage-systems.html"
+                                            <a href="./services/drainage-systems.html"
                                                 >Drainage Systems</a
                                             >
                                         </li>
                                         <li>
-                                            <a href="/services/water-services.html"
+                                            <a href="./services/water-services.html"
                                                 >Water Services</a
                                             >
                                         </li>
                                         <li>
-                                            <a href="/services/sanitary-sewers.html"
+                                            <a href="./services/sanitary-sewers.html"
                                                 >Sanitary Sewers</a
                                             >
                                         </li>
                                         <li>
-                                            <a href="/services/trenching.html"
+                                            <a href="./services/trenching.html"
                                                 >Trenching</a
                                             >
                                         </li>
                                         <li>
-                                            <a href="/services/excavation.html"
+                                            <a href="./services/excavation.html"
                                                 >Excavation</a
                                             >
                                         </li>
                                         <li>
-                                            <a href="/services/water-mains.html"
+                                            <a href="./services/water-mains.html"
                                                 >Water Mains</a
                                             >
                                         </li>
                                         <li>
-                                            <a href="/services/site-work.html"
+                                            <a href="./services/site-work.html"
                                                 >Water Mains</a
                                             >
                                         </li>
                                         <li>
-                                            <a href="/services/emergency-services.html"
+                                            <a href="./services/emergency-services.html"
                                                 >Emergency Services</a
                                             >
                                         </li>
@@ -225,52 +225,52 @@
                                 <li><a href="/service-areas">Service Areas</a>
                                     <ul class="drop-down">
                                         <li>
-                                            <a href="/service-areas/stamford-ct.html"
+                                            <a href="./service-areas/stamford-ct.html"
                                                 >Stamford, CT</a
                                             >
                                         </li>
                                         <li>
-                                            <a href="/service-areas/new-canaan-ct.html"
+                                            <a href="./service-areas/new-canaan-ct.html"
                                                 >New Canaan, CT</a
                                             >
                                         </li>
                                         <li>
-                                            <a href="/service-areas/greenwich-ct.html"
+                                            <a href="./service-areas/greenwich-ct.html"
                                                 >Greenwich, CT</a
                                             >
                                         </li>
                                         <li>
-                                            <a href="/service-areas/westport-ct.html"
+                                            <a href="./service-areas/westport-ct.html"
                                                 >Westport, CT</a
                                             >
                                         </li>
                                         <li>
-                                            <a href="/service-areas/norwalk-ct.html"
+                                            <a href="./service-areas/norwalk-ct.html"
                                                 >Norwalk, CT</a
                                             >
                                         </li>
                                         <li>
-                                            <a href="/service-areas/fairfield-ct.html"
+                                            <a href="./service-areas/fairfield-ct.html"
                                                 >Fairfield, CT</a
                                             >
                                         </li>
                                         <li>
-                                            <a href="/service-areas/darian-ct.html"
+                                            <a href="./service-areas/darian-ct.html"
                                                 >Darien, CT</a
                                             >
                                         </li>
                                         <li>
-                                            <a href="/service-areas/stratford-ct.html"
+                                            <a href="./service-areas/stratford-ct.html"
                                                 >Stratford, CT</a
                                             >
                                         </li>
                                         <li>
-                                            <a href="/service-areas/wilton-ct.html"
+                                            <a href="./service-areas/wilton-ct.html"
                                                 >Wilton, CT</a
                                             >
                                         </li>
                                         <li>
-                                            <a href="/service-areas/byram-ct.html"
+                                            <a href="./service-areas/byram-ct.html"
                                                 >Byram, CT</a
                                             >
                                         </li>
