more link path fixing

--- a/service-areas/greenwich-ct.html
+++ b/service-areas/greenwich-ct.html
@@ -121,12 +121,12 @@
                         >
                             <ul class="nav navbar-nav navbar-right">
                                 <li>
-                                    <a class="active" href="#home-section">Home</a>
+                                    <a href="/">Home</a>
                                 </li>
-                                <li><a href="#about">About</a></li>
+                                <li><a href="../#about">About</a></li>
                                 <!-- <li><a href="projects.html">Projects</a></li> -->
                                 <li>
-                                    <a href="services.html">Services</a>
+                                    <a href="../services">Services</a>
                                     <ul class="drop-down">
                                         <li>
                                             <a href="../services/drainage-systems.html"
@@ -171,61 +171,61 @@
                                     </ul>
                                 </li>
                                 <!-- <li><a href="blog.html">blog</a></li> -->
-                                <li><a href="service-areas.html">Service Areas</a>
+                                <li><a href="../service-areas">Service Areas</a>
                                     <ul class="drop-down">
                                         <li>
-                                            <a href="/service-areas/stamford-ct.html"
+                                            <a href="../service-areas/stamford-ct.html"
                                                 >Stamford, CT</a
                                             >
                                         </li>
                                         <li>
-                                            <a href="/service-areas/new-canaan-ct.html"
+                                            <a href="../service-areas/new-canaan-ct.html"
                                                 >New Canaan, CT</a
                                             >
                                         </li>
                                         <li>
-                                            <a href="/service-areas/greenwich-ct.html"
+                                            <a class="active" href="../service-areas/greenwich-ct.html"
                                                 >Greenwich, CT</a
                                             >
                                         </li>
                                         <li>
-                                            <a href="/service-areas/westport-ct.html"
+                                            <a href="../service-areas/westport-ct.html"
                                                 >Westport, CT</a
                                             >
                                         </li>
                                         <li>
-                                            <a href="/service-areas/norwalk-ct.html"
+                                            <a href="../service-areas/norwalk-ct.html"
                                                 >Norwalk, CT</a
                                             >
                                         </li>
                                         <li>
-                                            <a href="/service-areas/fairfield-ct.html"
+                                            <a  href="../service-areas/fairfield-ct.html"
                                                 >Fairfield, CT</a
                                             >
                                         </li>
                                         <li>
-                                            <a href="/service-areas/darian-ct.html"
+                                            <a  href="../service-areas/darian-ct.html"
                                                 >Darien, CT</a
                                             >
                                         </li>
                                         <li>
-                                            <a href="/service-areas/stratford-ct.html"
+                                            <a href="../service-areas/stratford-ct.html"
                                                 >Stratford, CT</a
                                             >
                                         </li>
                                         <li>
-                                            <a href="/service-areas/wilton-ct.html"
+                                            <a href="../service-areas/wilton-ct.html"
                                                 >Wilton, CT</a
                                             >
                                         </li>
                                         <li>
-                                            <a href="/service-areas/byram-ct.html"
+                                            <a  href="../service-areas/byram-ct.html"
                                                 >Byram, CT</a
                                             >
                                         </li>
                                     </ul>
                                 </li>
-                                <li><a href="contact.html">Contact</a></li>
+                                <li><a href="../contact.html">Contact</a></li>
                                 <!-- <li class="search">
                                     <a href="#" class="open-search"
                                         ><i class="fa fa-search"></i
