--- a/services/sanitary-sewers.html
+++ b/services/sanitary-sewers.html
@@ -284,7 +284,7 @@
                     <h1>Sanitary Sewer Systems Service</h1>
                     <ul class="page-depth">
                         <li><a href="/">Home</a></li>
-                        <li><a href="/services">Services</a></li>
+                        <li><a href="../services">Services</a></li>
                         <li><a href="#">Sanitary Sewer Systems</a></li>
                     </ul>
                 </div>
