--- a/services/excavation.html
+++ b/services/excavation.html
@@ -284,7 +284,7 @@
                     <h1>Excavation Services</h1>
                     <ul class="page-depth">
                         <li><a href="/">Home</a></li>
-                        <li><a href="/services">Services</a></li>
+                        <li><a href="../services">Services</a></li>
                         <li><a href="#">Excavation Services</a></li>
                     </ul>
                 </div>
