--- a/services/site-work.html
+++ b/services/site-work.html
@@ -284,7 +284,7 @@
                     <h1>Site Work Service</h1>
                     <ul class="page-depth">
                         <li><a href="/">Home</a></li>
-                        <li><a href="/services">Services</a></li>
+                        <li><a href="../services">Services</a></li>
                         <li><a href="#">Site Work Service</a></li>
                     </ul>
                 </div>
