--- a/services/trenching.html
+++ b/services/trenching.html
@@ -284,7 +284,7 @@
                     <h1>Trenching Service</h1>
                     <ul class="page-depth">
                         <li><a href="/">Home</a></li>
-                        <li><a href="/services">Services</a></li>
+                        <li><a href="../services">Services</a></li>
                         <li><a href="#">Trenching</a></li>
                     </ul>
                 </div>
