--- a/services/water-mains.html
+++ b/services/water-mains.html
@@ -284,7 +284,7 @@
                     <h1>Water Mains System Service</h1>
                     <ul class="page-depth">
                         <li><a href="/">Home</a></li>
-                        <li><a href="/services">Services</a></li>
+                        <li><a href="../services">Services</a></li>
                         <li><a href="#">Water Mains System</a></li>
                     </ul>
                 </div>
