--- a/services/emergency-services.html
+++ b/services/emergency-services.html
@@ -283,7 +283,7 @@
                 <div class="container">
                     <h1>Water & Drainage Emergency Services</h1>
                     <ul class="page-depth">
-                        <li><a href="/">Home</a></li>
+                        <li><a href="../">Home</a></li>
                         <li><a href="../services">Services</a></li>
                         <li><a href="#">Emergency Services</a></li>
                     </ul>
