--- a/services/sanitary-sewers.html
+++ b/services/sanitary-sewers.html
@@ -131,7 +131,7 @@
                             <a
                                 class="navbar-brand"
                                 style="font-size: 15px"
-                                href="#home-section"
+                                href="../"
                                 ><img
                                     style="width: 25px"
                                     src="../images/excavator.png"
@@ -147,7 +147,7 @@
                         >
                             <ul class="nav navbar-nav navbar-right">
                                 <li>
-                                    <a class="active" href="/">Home</a>
+                                    <a class="active" href="../">Home</a>
                                 </li>
                                 <li><a href="../#about">About</a></li>
                                 <!-- <li><a href="projects.html">Projects</a></li> -->
