more link path fixing

--- a/drainage-systems.html
+++ b/drainage-systems.html
@@ -232,7 +232,7 @@
                                     <div class="col-md-6">
                                         <div class="services-post">
                                             <img
-                                                src="upload/others/1.jpg"
+                                                src="./upload/others/1.jpg"
                                                 alt=""
                                             />
                                             <div class="services-content">
@@ -284,7 +284,7 @@
                                     <div class="col-md-6">
                                         <div class="services-post">
                                             <img
-                                                src="upload/others/2.jpg"
+                                                src="./upload/others/2.jpg"
                                                 alt=""
                                             />
                                             <div class="services-content">
