--- a/index.html
+++ b/index.html
@@ -177,7 +177,7 @@
                                 <li><a href="#about">About</a></li>
                                 <!-- <li><a href="projects.html">Projects</a></li> -->
                                 <li>
-                                    <a href="/services">Services</a>
+                                    <a href="./services">Services</a>
                                     <ul class="drop-down">
                                         <li>
                                             <a href="./services/drainage-systems.html"
@@ -276,7 +276,7 @@
                                         </li>
                                     </ul>
                                 </li>
-                                <li><a href="contact.html">Contact</a></li>
+                                <li><a href="./contact.html">Contact</a></li>
                                 <!-- <li class="search">
                                     <a href="#" class="open-search"
                                         ><i class="fa fa-search"></i
@@ -321,7 +321,7 @@
                             >
                                 <!-- MAIN IMAGE -->
                                 <img
-                                    src="upload/slide/1.jpg"
+                                    src="./upload/slide/1.jpg"
                                     alt="slidebg1"
                                     data-bgposition="center top"
                                     data-bgfit="cover"
@@ -460,7 +460,7 @@
                             >
                                 <!-- MAIN IMAGE -->
                                 <img
-                                    src="upload/slide/2.jpg"
+                                    src="./upload/slide/2.jpg"
                                     alt="slidebg1"
                                     data-bgposition="center top"
                                     data-bgfit="cover"
@@ -599,7 +599,7 @@
                             >
                                 <!-- MAIN IMAGE -->
                                 <img
-                                    src="upload/slide/3.jpg"
+                                    src="./upload/slide/3.jpg"
                                     alt="3dbg"
                                     data-bgposition="center top"
                                     data-bgfit="cover"
@@ -1143,7 +1143,7 @@
                                 <br />
                                 <img
                                     style="border-radius: 15px"
-                                    src="upload/others/truck.jpg"
+                                    src="./upload/others/truck.jpg"
                                     alt=""
                                 />
                                 <h2>Working Hours</h2>
@@ -1521,28 +1521,28 @@
         </div>
         <!-- End Container -->
 
-        <script type="text/javascript" src="js/jquery.min.js"></script>
-        <script type="text/javascript" src="js/jquery.migrate.js"></script>
-        <script type="text/javascript" src="js/jquery.bxslider.min.js"></script>
-        <script type="text/javascript" src="js/owl.carousel.min.js"></script>
-        <script type="text/javascript" src="js/bootstrap.min.js"></script>
+        <script type="text/javascript" src="./js/jquery.min.js"></script>
+        <script type="text/javascript" src="./js/jquery.migrate.js"></script>
+        <script type="text/javascript" src="./js/jquery.bxslider.min.js"></script>
+        <script type="text/javascript" src="./js/owl.carousel.min.js"></script>
+        <script type="text/javascript" src="./js/bootstrap.min.js"></script>
         <script
             type="text/javascript"
-            src="js/jquery.imagesloaded.min.js"
+            src="./js/jquery.imagesloaded.min.js"
         ></script>
-        <script type="text/javascript" src="js/retina-1.1.0.min.js"></script>
+        <script type="text/javascript" src="./js/retina-1.1.0.min.js"></script>
         <!-- SLIDER REVOLUTION 4.x SCRIPTS  -->
         <script
             type="text/javascript"
-            src="js/jquery.themepunch.tools.min.js"
+            src="./js/jquery.themepunch.tools.min.js"
         ></script>
         <script
             type="text/javascript"
-            src="js/jquery.themepunch.revolution.min.js"
+            src="./js/jquery.themepunch.revolution.min.js"
         ></script>
         <script src="https://maps.googleapis.com/maps/api/js?v=3.exp&amp;sensor=false"></script>
-        <script type="text/javascript" src="js/gmap3.min.js"></script>
-        <script type="text/javascript" src="js/script.js"></script>
+        <script type="text/javascript" src="./js/gmap3.min.js"></script>
+        <script type="text/javascript" src="./js/script.js"></script>
 
         <!-- Revolution slider -->
         <script type="text/javascript">
