--- a/services/index.html
+++ b/services/index.html
@@ -131,7 +131,7 @@
                             <a
                                 class="navbar-brand"
                                 style="font-size: 15px"
-                                href="#home-section"
+                                href="../"
                                 ><img
                                     style="width: 25px"
                                     src="../images/excavator.png"
