--- a/service-areas/stamford-ct.html
+++ b/service-areas/stamford-ct.html
@@ -108,7 +108,7 @@
                                 href="../index.html"
                                 ><img
                                     style="width: 25px"
-                                    src="images/excavator.png"
+                                    src="../images/excavator.png"
                                     alt=""
                                 />Surwilo Contracting</a
                             >
