--- a/service-areas/stamford-ct.html
+++ b/service-areas/stamford-ct.html
@@ -121,7 +121,7 @@
                         >
                             <ul class="nav navbar-nav navbar-right">
                                 <li>
-                                    <a href="/">Home</a>
+                                    <a href="../">Home</a>
                                 </li>
                                 <li><a href="../#about">About</a></li>
                                 <!-- <li><a href="projects.html">Projects</a></li> -->
@@ -295,7 +295,7 @@
                     >
                         <img
                             style="width: 100px; height: auto"
-                            src="images/excavator.png"
+                            src="../images/excavator.png"
                         />
                     </div>
                     <div class="col-md-4">
